[package]
name = "explore"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
nalgebra = "*"

systems = { path="src/systems" }
core = { path="src/core" }
art = { path="src/art" }
components = { path="src/components" }
graphics = { path="src/graphics" }
utils = { path="src/utils" }
