[package]
name = "core"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
gfx = "*"
gfx_device_gl = "*"
glutin = "*"
gfx_window_glutin = "*"
specs = "*"
nalgebra = "*"
time = "*"

art = { path="../art" }
systems = { path="../systems" }
utils = { path="../utils" }
components = { path="../components" }
graphics = { path="../graphics" }
